--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@ limitations under the License.
   </repositories>
   <dependencies>
     <dependency>
-      <groupId>org.apache.commons</groupId>
+      <groupId>org.apache.commons</groupId>`
       <artifactId>commons-lang3</artifactId>
       <version>3.17.0</version>
       <scope>test</scope>
