--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "nighatshaheen",
         "projectKey": "NighatShaheen_commons-codec"
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
