--- a/pom.xml
+++ b/pom.xml
@@ -141,18 +141,18 @@ limitations under the License.
     <commons.release.isDistModule>true</commons.release.isDistModule>
     <commons.distSvnStagingUrl>scm:svn:https://dist.apache.org/repos/dist/dev/commons/${commons.componentid}</commons.distSvnStagingUrl>
     <project.build.outputTimestamp>2024-07-15T22:27:42Z</project.build.outputTimestamp>
-    <commons.jacoco.version>0.8.10</commons.jacoco.version>
+    <!-- <commons.jacoco.version>0.8.10</commons.jacoco.version> -->
     <!-- Temp for SUREFIRE-2253 -->
     <commons.surefire.version>3.2.5</commons.surefire.version>
     <!-- JaCoCo: Don't make code coverage worse than: -->
     <jacoco.skip>false</jacoco.skip>
-    <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
+    <!-- <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
     <commons.jacoco.classRatio>0.92</commons.jacoco.classRatio>
     <commons.jacoco.instructionRatio>0.91</commons.jacoco.instructionRatio>
     <commons.jacoco.methodRatio>0.87</commons.jacoco.methodRatio>
     <commons.jacoco.branchRatio>0.86</commons.jacoco.branchRatio>
     <commons.jacoco.lineRatio>0.89</commons.jacoco.lineRatio>
-    <commons.jacoco.complexityRatio>0.84</commons.jacoco.complexityRatio>
+    <commons.jacoco.complexityRatio>0.84</commons.jacoco.complexityRatio> -->
   </properties>
   <build>
     <defaultGoal>clean verify apache-rat:check japicmp:cmp checkstyle:check javadoc:javadoc</defaultGoal>
@@ -379,13 +379,13 @@ limitations under the License.
 	  </activation>
       <properties>
         <!-- JaCoCo: Don't make code coverage worse than: -->
-        <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
+        <!-- <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
         <commons.jacoco.classRatio>0.96</commons.jacoco.classRatio>
         <commons.jacoco.instructionRatio>0.97</commons.jacoco.instructionRatio>
         <commons.jacoco.methodRatio>0.88</commons.jacoco.methodRatio>
         <commons.jacoco.branchRatio>0.92</commons.jacoco.branchRatio>
         <commons.jacoco.complexityRatio>0.88</commons.jacoco.complexityRatio>
-        <commons.jacoco.lineRatio>0.94</commons.jacoco.lineRatio>
+        <commons.jacoco.lineRatio>0.94</commons.jacoco.lineRatio> -->
       </properties>
     </profile>
     <profile>
@@ -427,13 +427,13 @@ limitations under the License.
 	  </activation>
       <properties>
         <!-- JaCoCo: Don't make code coverage worse than: -->
-        <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
+        <!-- <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
         <commons.jacoco.classRatio>0.96</commons.jacoco.classRatio>
         <commons.jacoco.instructionRatio>0.97</commons.jacoco.instructionRatio>
         <commons.jacoco.methodRatio>0.93</commons.jacoco.methodRatio>
         <commons.jacoco.branchRatio>0.92</commons.jacoco.branchRatio>
         <commons.jacoco.complexityRatio>0.90</commons.jacoco.complexityRatio>
-        <commons.jacoco.lineRatio>0.95</commons.jacoco.lineRatio>
+        <commons.jacoco.lineRatio>0.95</commons.jacoco.lineRatio> -->
       </properties>
     </profile>
   </profiles>
