--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,43 @@ limitations under the License.
       <artifactId>jmh-generator-annprocess</artifactId>
       <version>1.37</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.15</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.6.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-maven-plugin</artifactId>
+      <version>4.0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.owasp</groupId>
+      <artifactId>dependency-check-maven</artifactId>
+      <version>9.0.10</version>
+    </dependency>
   </dependencies>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -190,6 +227,8 @@ limitations under the License.
             <exclude>src/test/resources/org/apache/commons/codec/bla.tar.xz</exclude>
             <exclude>src/test/resources/org/apache/commons/codec/empty.bin</exclude>
             <exclude>src/test/resources/org/apache/commons/codec/small.bin</exclude>
+            <include>randoop/**</include>
+            <exclude>**/*</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -305,6 +344,42 @@ limitations under the License.
           <target>17</target> <!-- Set to your Java version -->
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <configuration>
+          <effort>Max</effort> <!-- Deep analysis -->
+          <threshold>Medium</threshold> <!-- Include Medium or higher severity issues -->
+          <failOnError>true</failOnError> <!-- Fail the build if issues are found -->
+          <includeFilterFile>${basedir}/src/conf/spotbugs-include-filter.xml</includeFilterFile>
+          <excludeFilterFile>${basedir}/src/conf/spotbugs-exclude-filter.xml</excludeFilterFile>
+       <plugins>
+         <plugin>
+          <groupId>com.h3xstream.findsecbugs</groupId>
+          <artifactId>findsecbugs-plugin</artifactId>
+           <version>1.12.0</version> <!-- You can change to the latest version -->
+    </plugin>
+    </plugins>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.moditect</groupId>
+        <artifactId>moditect-maven-plugin</artifactId>
+        <version>1.2.2.Final</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>add-module-info</goal>
+            </goals>
+            <configuration>
+              <skip>false</skip> <!-- Keep Moditect processing enabled -->
+              <excludedDependencies>
+                <excludedDependency>org.codehaus.plexus:plexus-container-default</excludedDependency> <!-- Exclude Plexus -->
+              </excludedDependencies>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <reporting>
@@ -358,14 +433,6 @@ limitations under the License.
             <tag>NOPMD</tag>
             <tag>NOTE</tag>
           </tags>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <release>17</release>
         </configuration>
       </plugin>
     </plugins>
