--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@ limitations under the License.
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.15</version>
+      <exclusions>
+        <exclusion>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-container-default</artifactId>
+            <version>2.1.1</version>
+        </exclusion>
+    </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -465,6 +472,29 @@ limitations under the License.
               </execution>
             </executions>
           </plugin>
+          <plugin>
+    <groupId>org.moditect</groupId>
+    <artifactId>moditect-maven-plugin</artifactId>
+    <version>1.2.2.Final</version>
+    <executions>
+        <execution>
+            <id>add-module-infos</id>
+            <goals>
+                <goal>add-module-info</goal>
+            </goals>
+            <configuration>
+                <modules>
+                    <module>
+                        <groupId>org.codehaus.plexus</groupId>
+                        <artifactId>plexus-container-default</artifactId>
+                        <version>2.1.0</version>
+                        <assignedModuleName>org.codehaus.plexus.container</assignedModuleName>
+                    </module>
+                </modules>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
         </plugins>
       </build>
     </profile>
