--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,5 +48,5 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: ${{ matrix.java }}
-    -  name: Build with Maven (Skip Moditect)
-      run: mvn --errors --show-version --batch-mode --no-transfer-progress -Dmoditect.skip
+    - name: Build with Maven
+      run: mvn --errors --show-version --batch-mode --no-transfer-progress
