--- a/pom.xml
+++ b/pom.xml
@@ -75,15 +75,15 @@ limitations under the License.
   </repositories>
   <dependencies>
     <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.18.0</version>
-      <scope>test</scope>
-    </dependency>
-     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.17.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.18.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -119,6 +119,43 @@ limitations under the License.
       <artifactId>jmh-generator-annprocess</artifactId>
       <version>1.37</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.15</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.6.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-maven-plugin</artifactId>
+      <version>4.0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.owasp</groupId>
+      <artifactId>dependency-check-maven</artifactId>
+      <version>9.0.10</version>
+    </dependency>
   </dependencies>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -141,18 +178,18 @@ limitations under the License.
     <commons.release.isDistModule>true</commons.release.isDistModule>
     <commons.distSvnStagingUrl>scm:svn:https://dist.apache.org/repos/dist/dev/commons/${commons.componentid}</commons.distSvnStagingUrl>
     <project.build.outputTimestamp>2024-07-15T22:27:42Z</project.build.outputTimestamp>
-    <!-- <commons.jacoco.version>0.8.10</commons.jacoco.version> -->
+    <commons.jacoco.version>0.8.12</commons.jacoco.version>
     <!-- Temp for SUREFIRE-2253 -->
     <commons.surefire.version>3.2.5</commons.surefire.version>
     <!-- JaCoCo: Don't make code coverage worse than: -->
     <jacoco.skip>false</jacoco.skip>
-    <!-- <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
+    <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
     <commons.jacoco.classRatio>0.92</commons.jacoco.classRatio>
     <commons.jacoco.instructionRatio>0.91</commons.jacoco.instructionRatio>
     <commons.jacoco.methodRatio>0.87</commons.jacoco.methodRatio>
     <commons.jacoco.branchRatio>0.86</commons.jacoco.branchRatio>
     <commons.jacoco.lineRatio>0.89</commons.jacoco.lineRatio>
-    <commons.jacoco.complexityRatio>0.84</commons.jacoco.complexityRatio> -->
+    <commons.jacoco.complexityRatio>0.84</commons.jacoco.complexityRatio>
   </properties>
   <build>
     <defaultGoal>clean verify apache-rat:check japicmp:cmp checkstyle:check javadoc:javadoc</defaultGoal>
@@ -190,6 +227,8 @@ limitations under the License.
             <exclude>src/test/resources/org/apache/commons/codec/bla.tar.xz</exclude>
             <exclude>src/test/resources/org/apache/commons/codec/empty.bin</exclude>
             <exclude>src/test/resources/org/apache/commons/codec/small.bin</exclude>
+            <include>randoop/**</include>
+            <exclude>**/*</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -251,7 +290,7 @@ limitations under the License.
           </ignores>
         </configuration>
       </plugin>
-      <!-- <plugin>
+      <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.8.10</version>
@@ -269,7 +308,7 @@ limitations under the License.
             </goals>
           </execution>
         </executions>
-      </plugin> -->
+      </plugin>
       <plugin>
         <groupId>org.pitest</groupId>
         <artifactId>pitest-maven</artifactId>
@@ -305,8 +344,6 @@ limitations under the License.
           <target>17</target> <!-- Set to your Java version -->
         </configuration>
       </plugin>
-<<<<<<< HEAD
-=======
          <plugin>
           <groupId>com.h3xstream.findsecbugs</groupId>
           <artifactId>findsecbugs-plugin</artifactId>
@@ -325,7 +362,6 @@ limitations under the License.
     </plugins>
         </configuration>
       </plugin>
->>>>>>> upstream/master
     </plugins>
   </build>
   <reporting>
@@ -381,14 +417,6 @@ limitations under the License.
           </tags>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.11.0</version>
-        <configuration>
-          <release>17</release>
-        </configuration>
-      </plugin>
     </plugins>
   </reporting>
   <profiles>
@@ -400,13 +428,13 @@ limitations under the License.
 	  </activation>
       <properties>
         <!-- JaCoCo: Don't make code coverage worse than: -->
-        <!-- <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
+        <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
         <commons.jacoco.classRatio>0.96</commons.jacoco.classRatio>
         <commons.jacoco.instructionRatio>0.97</commons.jacoco.instructionRatio>
         <commons.jacoco.methodRatio>0.88</commons.jacoco.methodRatio>
         <commons.jacoco.branchRatio>0.92</commons.jacoco.branchRatio>
         <commons.jacoco.complexityRatio>0.88</commons.jacoco.complexityRatio>
-        <commons.jacoco.lineRatio>0.94</commons.jacoco.lineRatio> -->
+        <commons.jacoco.lineRatio>0.94</commons.jacoco.lineRatio>
       </properties>
     </profile>
     <profile>
@@ -448,13 +476,13 @@ limitations under the License.
 	  </activation>
       <properties>
         <!-- JaCoCo: Don't make code coverage worse than: -->
-        <!-- <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
+        <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
         <commons.jacoco.classRatio>0.96</commons.jacoco.classRatio>
         <commons.jacoco.instructionRatio>0.97</commons.jacoco.instructionRatio>
         <commons.jacoco.methodRatio>0.93</commons.jacoco.methodRatio>
         <commons.jacoco.branchRatio>0.92</commons.jacoco.branchRatio>
         <commons.jacoco.complexityRatio>0.90</commons.jacoco.complexityRatio>
-        <commons.jacoco.lineRatio>0.95</commons.jacoco.lineRatio> -->
+        <commons.jacoco.lineRatio>0.95</commons.jacoco.lineRatio>
       </properties>
     </profile>
   </profiles>
